results/classifier/zero-shot/111/review/1382477
vnc: 0.135
device: 0.130
other: 0.115
semantic: 0.111
files: 0.103
permissions: 0.067
network: 0.061
socket: 0.050
graphic: 0.047
debug: 0.043
PID: 0.042
boot: 0.041
performance: 0.032
KVM: 0.024
debug: 0.456
files: 0.314
device: 0.047
other: 0.043
semantic: 0.024
PID: 0.024
KVM: 0.019
boot: 0.015
performance: 0.012
network: 0.011
socket: 0.011
graphic: 0.010
permissions: 0.007
vnc: 0.007

hw/i386/intel_iommu.c:902: wrong logical operator ?

/home/dcb/qemu/trunk/qemu/hw/i386/intel_iommu.c:902:5: error: logical ‘and’ applied to non-boolean constant [-Werror=logical-op]
     pvtd_as = s->address_spaces[VTD_SID_TO_BUS(source_id)];
     ^

$ fgrep VTD_SID_TO_BUS `find . -name \*.h -print`
./include/hw/i386/intel_iommu.h:#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) && 0xff)
$ 

Sounds to me like

#define VTD_SID_TO_BUS(sid)         (((sid) >> 8) & 0xff)

would be better.

Fix has been included here:
http://git.qemu.org/?p=qemu.git;a=commitdiff;h=1e06f131fd9a44dd4af

